--- a/neuro-geometric-placer/requirements.txt
+++ b/neuro-geometric-placer/requirements.txt
@@ -7,7 +7,8 @@ pydantic>=2.0.0
 # AI & LLM
 openai>=1.0.0  # For xAI compatibility
 requests>=2.31.0
-openmcp>=0.4.0  # Dedalus Labs MCP framework
+dedalus-labs>=0.0.1  # Dedalus Labs SDK
+openmcp>=0.1.0a0  # Dedalus Labs MCP framework (from GitHub)
 
 # Computational geometry
 numpy>=1.24.0
