Restructure MCP server: move to src/ directory as expected by Dedalus Labs

--- a/neuro-geometric-placer/pyproject.toml
+++ b/neuro-geometric-placer/pyproject.toml
@@ -30,8 +30,8 @@ dependencies = [
 ]
 
 [project.scripts]
-ngp = "main:main"
+ngp = "src.main:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["backend*"]
+include = ["src*"]
