--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "neuro-geometric-placer"
+name = "dielectric"
 version = "0.1.0"
 description = "AI-powered PCB component placement optimization"
 readme = "README.md"
